--- a/gulp-starter-main/src/assets/sass/_card.scss
+++ b/gulp-starter-main/src/assets/sass/_card.scss
@@ -17,6 +17,7 @@
     box-shadow: 0px 16px 40px #00000029;
     margin-bottom: 100px;
     border-radius: 5px;
+    transition: 0.3s ease;
     &__img{
         width: 300px;
         margin-bottom: 20px;
