--- a/gulp-starter-main/src/assets/sass/_nav.scss
+++ b/gulp-starter-main/src/assets/sass/_nav.scss
@@ -28,6 +28,15 @@ body{
         justify-content: center;
     }
 }
+@media (-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi) { 
+
+    .head{    
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/travail_mobile@2x.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;  }
+}
 .head__socEl{
     height: 50px;
     width: 50px;
@@ -47,5 +56,15 @@ body{
         background-repeat: no-repeat;
         background-attachment: fixed; 
     }
+    @media (-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi) { 
+
+    .head{
+        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/travail_tablet@2x.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+    }
+}
 
 }
